[package]
name = "redis-rust"
version = "0.1.0"
edition = "2021"
authors = ["Redis-Rust Contributors"]
description = "A Redis implementation in Rust with full protocol compatibility"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/redis-rust"
keywords = ["redis", "database", "cache", "key-value"]
categories = ["database"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Networking and byte handling
bytes = "1.5"

# Concurrent data structures
dashmap = "5.5"
crossbeam = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Lua scripting (disabled for now - requires Lua runtime)
# mlua = { version = "0.9", features = ["lua54", "async", "send", "module"] }

# SHA1 for script hashing
sha1 = "0.10"

# Utilities
bitflags = "2.4"
crc16 = "0.4"
ordered-float = "4.2"
rand = "0.8"

[dev-dependencies]
# Testing with Redis client
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Benchmarking
criterion = { version = "0.5", features = ["async_tokio"] }

# Property testing
proptest = "1.4"

# Test utilities
tempfile = "3.8"
assert_cmd = "2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"

[[bench]]
name = "micro"
harness = false

[[bench]]
name = "throughput"
harness = false
